rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-faa8018aec92c530.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libonly_arrow_rs-faa8018aec92c530.rmeta: only-arrow.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/only_arrow_rs-faa8018aec92c530.d: only-arrow.rs Cargo.toml

only-arrow.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
